Fix layout problems

--- a/styles.css
+++ b/styles.css
@@ -10,16 +10,21 @@
 
 body {
   background-color: black;
+  margin-top: 30px;
+  margin-right: 30px;
+  margin-bottom: 40px;
+  margin-left: 30px;
 }
 
 #header {
   color: white;
   text-align: center;
-  font-size: 50px;
-  margin-bottom: 10px;
+  font-size: 70px;
+  font-weight: 1000;
+  margin: 20px auto 10px;
 }
 
-.hr-index {
+hr {
   border: 1.5px solid grey;
 }
 
@@ -27,15 +32,9 @@ body {
   text-align: center;
   list-style: none;
   font-size: 50px;
+  font-weight: bold;
   margin-top: 20px;
   padding-left: 0;
-}
-
-.body-box {
-  margin-top: 30px;
-  margin-right: 30px;
-  margin-bottom: 40px;
-  margin-left: 30px;
 }
 
 img {
@@ -61,12 +60,16 @@ ol,
 ul,
 a {
   color: white;
-  font-weight: 500;
+  font-weight: 300;
   font-size: 25px;
 }
 
 a {
   color: goldenrod;
+}
+
+.nav-links {
+  font-weight: 1000;
 }
 
 h1,
